[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["jpeg"] }
bevy_cameras = { path = "../plugins/bevy_cameras" }
bevy_mod_picking = { workspace = true }
